@@ -116,7 +116,21 @@ void FrameListParameter::setFrameListValue( ConstFrameListPtr frameList )
 	setTypedValue( frameList->asString() );
 }
 
+FrameListPtr FrameListParameter::getFrameListValue( const StringData *value ) const
+{
+	FrameListPtr frameList = FrameList::parse( value->readable() );
+	if ( !m_allowEmptyList && frameList->isInstanceOf( EmptyFrameListTypeId ) )
+	{
+		throw Exception( "Empty frame list not allowed!" );
+	}
+
+	return frameList;
+}
+
 FrameListPtr FrameListParameter::getFrameListValue() const
 {
-	return FrameList::parse( getTypedValue() );
+	const StringData *stringDataValue = assertedStaticCast<const StringData>( getValue() );
+	return getFrameListValue( stringDataValue );
 }
+
+
