@@ -162,7 +162,9 @@ static void setFileSequenceExtensionsWrap( FileSequenceParameter &param, object 
 
 void bindFileSequenceParameter()
 {
-
+	FileSequencePtr (FileSequenceParameter::*getFileSequenceValueInternalData)() const = &FileSequenceParameter::getFileSequenceValue;
+	FileSequencePtr (FileSequenceParameter::*getFileSequenceValueStringData)( const StringData *value ) const = &FileSequenceParameter::getFileSequenceValue;
+	
 	RunTimeTypedClass<FileSequenceParameter, FileSequenceParameterWrap::Ptr>()
 		.def(
 			init< const std::string &, const std::string &, boost::python::optional< object, bool, FileSequenceParameter::CheckType, const object &, bool, CompoundObjectPtr, object, int > >
@@ -181,7 +183,8 @@ void bindFileSequenceParameter()
 				)
 			)
 		)
-		.def( "getFileSequenceValue", &FileSequenceParameter::getFileSequenceValue )
+		.def( "getFileSequenceValue", getFileSequenceValueInternalData )
+		.def( "getFileSequenceValue", getFileSequenceValueStringData )
 		.def( "setFileSequenceValue", &FileSequenceParameter::setFileSequenceValue )
 		.def( "setMinSequenceSize", &FileSequenceParameter::setMinSequenceSize )
 		.def( "getMinSequenceSize", &FileSequenceParameter::getMinSequenceSize )
