@@ -212,12 +212,27 @@ class FileSequenceVectorParameterWrap : public FileSequenceVectorParameter, publ
 			setFileSequenceValues( seqs );
 		}
 
-		list getFileSequenceValuesWrap() const
+		list getFileSequenceValuesInternalDataWrap() const
 		{
 			list r;
 
 			std::vector< FileSequencePtr > sequences;
 			getFileSequenceValues( sequences );
+
+			for ( std::vector< FileSequencePtr >::const_iterator it = sequences.begin(); it != sequences.end(); ++it )
+			{
+				r.append( *it );
+			}
+
+			return r;
+		}
+		
+		list getFileSequenceValuesDataWrap( const StringVectorData *value ) const
+		{
+			list r;
+
+			std::vector< FileSequencePtr > sequences;
+			getFileSequenceValues( value, sequences );
 
 			for ( std::vector< FileSequencePtr >::const_iterator it = sequences.begin(); it != sequences.end(); ++it )
 			{
@@ -250,7 +265,8 @@ void bindFileSequenceVectorParameter()
 				)
 			)
 		)
-		.def( "getFileSequenceValues", &FileSequenceVectorParameterWrap::getFileSequenceValuesWrap )
+		.def( "getFileSequenceValues", &FileSequenceVectorParameterWrap::getFileSequenceValuesInternalDataWrap )
+		.def( "getFileSequenceValues", &FileSequenceVectorParameterWrap::getFileSequenceValuesDataWrap )
 		.def( "setFileSequenceValues", &FileSequenceVectorParameterWrap::setFileSequenceValuesWrap )
 		.add_property( "extensions",&FileSequenceVectorParameterWrap::getExtensionsWrap, &FileSequenceVectorParameterWrap::setExtensionsWrap )
 		.IECOREPYTHON_DEFPARAMETERWRAPPERFNS( FileSequenceVectorParameter )
